<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changeBackround"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/nav_header_title"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_subtitle"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/nav_header_subtitle" />

<Button
    android:id="@+id/btnLogout"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="40dp"
    android:drawableStart="@drawable/ic_logout"
    android:drawablePadding="@dimen/_5sdp"
    android:background="@drawable/bg_white"
    android:text="@string/logout"
    style="@style/textViewDescriptionBlack"
    android:layout_marginTop="@dimen/_5sdp"/>

</LinearLayout></layout>