<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_home"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/back"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/bottom_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_curve_top_white"
            android:orientation="vertical"
            android:paddingTop="@dimen/_30sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />


            <Button
                android:id="@+id/loginBtn"
                style="@style/btnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/log_in" />

            <include layout="@layout/or_layout" />

            <Button
                android:id="@+id/createBtn"
                style="@style/btnOutlineGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/sign_up"
                android:textColor="@color/black" />


            <include
                android:id="@+id/otherSigninOption"
                layout="@layout/layout_fb_google" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>