<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/itiaboutus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_us_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt_itizone"
             android:background="@drawable/com_facebook_button_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/itizone_com"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_electrician_blog"
                android:background="@drawable/com_facebook_button_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/electrician_in_hindi_com"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
