<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_home"
        tools:context=".ui.welcome.WelcomeFragment">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login"
            android:layout_above="@id/text_lyt"/>


        <LinearLayout
            android:id="@+id/text_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_above="@+id/loginBtn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/textViewBigWhite"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="welcome to Iti test app an Electrical Engineering Student App "
          style="@style/textViewDescriptionWhite"

                />

        </LinearLayout>



        <Button
            android:id="@+id/loginBtn"
            style="@style/btnWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/createBtn"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/createBtn"
            style="@style/btnOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/sign_up" />




    </RelativeLayout>

</layout>